Fixed BEM structure for improved organization and readability

--- a/blocks/form.css
+++ b/blocks/form.css
@@ -13,15 +13,15 @@
   background-color: #ffffff;
 }
 
-.form__close-clean {
+.form__close_clean {
   display: none;
 }
-.form__edit {
+.form__close_edit {
   width: 100%;
   height: 100%;
 }
 
-.form__edit-title {
+.form__close_title {
   width: 330px;
   height: 23px;
   background-color: #ffffff;
@@ -33,14 +33,14 @@
   text-align: left;
   margin: 34px 64px 10px 36px;
 }
-.form__edit-change {
+.form__close_edit-change {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   margin-top: 45px;
 }
-.form__input-text {
+.form__close_input-text {
   max-width: 358px;
   width: 100%;
   height: 35px;
@@ -50,7 +50,7 @@
   margin-right: 36px;
   margin-top: 20px;
 }
-.form__input-text::placeholder {
+.form__close_input-text::placeholder {
   font-family: "Inter";
   font-size: 14px;
   font-weight: 400;
@@ -58,7 +58,7 @@
   letter-spacing: 0em;
   text-align: left;
 }
-.form__edit-change-save {
+.form__close_edit-change-save {
   width: 358px;
   height: 50px;
   background-color: #000000;
@@ -73,11 +73,11 @@
   text-align: center;
 }
 
-.form__edit-change-save:hover {
+.form__close_edit-change-save:hover {
   opacity: 0.8;
 }
 
-.form__button-esc {
+.form__close_button-esc {
   background-image: url(../images/Close\ Icon.png);
   width: 40px;
   height: 40px;
@@ -119,25 +119,25 @@
     margin: 0;
     color: #ffffff;
   }
-  .form__edit {
+  .form__close_edit {
     width: 100%;
     height: 100%;
   }
 
-  .form__edit-title {
+  .form__close_title {
     max-width: 238px;
   }
-  .form__edit-change-save {
+  .form__close_edit-change-save {
     width: 238px;
   }
-  .form__input-text {
+  .form__close_input-text {
     max-width: 238px;
     width: 100%;
   }
 }
 
 @media (max-width: 420px) {
-  .form__button-esc {
+  .form__close_button-esc {
     width: 26px;
     height: 26px;
     background-color: transparent;
